--- a/TianMao/css/TianMao.css
+++ b/TianMao/css/TianMao.css
@@ -1240,3 +1240,230 @@ ul{
 .kidText p{
 	color:#F7A945;
 }
+
+/*猜你喜欢*/
+.like{
+	margin-top: 40px;
+	width: 100%;
+}
+.toLike{
+	width: 1300px;
+	min-width: 1300px;
+}
+.wonderful-title{
+	color: rgb(102, 102, 102);
+	font-size: 18px;
+	font-weight: 100;
+	height: 43px;
+	line-height: 40px;
+	text-align: center;
+	position: relative;
+}
+.wonderful-title:after{
+	content: '';
+	position: absolute;
+	top: 18px;
+	margin-left: 10px;
+	height: 1px;
+	width: 30px;
+	background:#979797;
+}
+.wonderful-title:before{
+	position: absolute;
+	top: 18px;
+	margin-left: -40px;
+	content: '';
+	height: 1px;
+	width: 30px;
+	background:#979797;
+}
+.like_recommend{
+	width: 100%;
+	text-align: left;
+	
+}
+.like_recommend ul {
+	width: 100%;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	height: 310px;
+	float: left;
+	margin-bottom: 10px;
+}
+.like_recommend ul li {
+	width: 19%;
+	padding: 0;
+	margin: 0;
+	height: 100%;
+	float: left;
+	margin-right: 1%;
+	box-sizing: border-box;
+	border: 1px solid white;
+}
+.like_recommend ul li img{
+	width: 92%;
+	height: 75%;
+}
+.like_recommend a{
+	text-decoration: none;
+	color: black;
+}
+.like_recommendTitle{
+	display: inline-block;
+	color: #666;
+	font-size: 14px;
+	padding-left: 8px;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	-moz-box-orient: vertical;
+}
+.likeMoney{
+	color: red;
+	padding-left: 5px;
+}
+.like_end{
+	display: inline-block;
+	margin-top: 20px;
+	background: url(//img.alicdn.com/tps/TB1wQDAPXXXXXXgaFXXXXXXXXXX-62-35.png) no-repeat;
+	text-align: center;
+	width: 80px;
+	height: 45px;
+	background-size: cover;
+	z-index: 5;
+}
+
+
+.likeOpc{
+	-webkit-animation:opacLike 0.8s  forwards ;
+}
+.likeOpcNo{
+	-webkit-animation:opacLikeNo 0.8s  forwards ;
+}
+@-webkit-keyframes opacLike{
+	from{
+		opacity: 1;
+	}
+	to{
+		opacity: 0.6;
+	}
+}
+@-webkit-keyframes opacLikeNo{
+	from{
+		opacity: 0.6;
+	}
+	to{
+		opacity: 1;
+	}
+}
+
+.quality{
+	width: 100%;
+	margin-top: 20px;
+}
+.toQuality{
+	min-width: 1300px;
+	width: 1300px;
+}
+.guarantee{
+	width: 100%;
+	height: 100px;
+	background-size: cover;
+	background: url(../img/guarantee.jpg) no-repeat;
+}
+.guarantee a{
+	display: inline-block;
+	height: 100%;
+	width: 100%;
+}
+.guide{
+	width: 100%;
+	height: 225px;
+	text-align: left;
+}
+.guide ul{
+	list-style: none;
+	margin-top: 30px;
+	margin-left: 50px;
+	float: left;
+	margin-right: 128px;
+}
+.guide a{
+	text-decoration: none;
+	color: #8B8B8B;
+	font-size: 13px;
+}
+.guide a:hover{
+	text-decoration: underline;
+}
+.guide li:nth-child(2){
+	margin-top: 5px;
+}
+.guide h4{
+	color: #646464;
+}
+
+/*end*/
+.ending{
+	margin-top: 10px;
+	width: 100%;
+	border-top: 2px solid red;
+	background: #000000;
+}
+.toEnding{
+	width: 1300px;
+	min-width: 1300px;
+	text-align: left;
+	position: relative;
+}
+.white{
+	color: white;
+}
+.white a{
+	text-decoration: none;
+	font-size: 12px;
+	display: inline-block;
+	padding-right: 3px;
+	margin-top: 10px;
+	color: white;
+}
+.gray{
+	font-size: 13px;
+	margin-top: 10px;
+	color: #A4A4A4;
+}
+.gray small{
+	font-size: 13px;
+}
+.gray a{
+	height: 25px;
+	color: #A4A4A4;
+	text-decoration: none;
+	text-align: left;
+	line-height: 25px;
+	position: relative;
+}
+.gray div{
+	float: left;
+	margin-right: 80px;
+}
+.gray a img{
+	position: absolute;
+	top: 0px;
+}
+.gray a small{
+	margin-left: 25px;
+}
+.sma{
+	text-align: left;
+	float: left;
+	font-size: 8px;
+	color: #686868;
+}
+.endingIMG{
+	position: absolute;
+	top: -32px;
+	left: 50px;
+}
